src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <formula>IF( ISPICKVAL(Relationship__c, &apos;Positive&apos;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( ISPICKVAL(Relationship__c, &apos;Detractor&apos;), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;), 
IF( ISPICKVAL(Relationship__c, &apos;Positive&apos;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;red&quot;),&apos;&apos; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAE_Email__c</fullName>
        <label>SAE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAE Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (SAE Name)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCE_Email__c</fullName>
        <label>SCE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SCE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCE Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_percent__c</fullName>
        <label>Survey Completion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Completions__c</fullName>
        <label>Survey Completions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Reset_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Reset Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <description>Name of affiliated hospital system</description>
        <label>System Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TPA_Lives__c</fullName>
        <label>TPA Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Better Together</fullName>
                </value>
                <value>
                    <fullName>UHC Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Covered_Lives__c</fullName>
        <label>Total Covered Lives</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_FTEs__c</fullName>
        <description>Number of full time employees</description>
        <label>Total FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Facility_Beds__c</fullName>
        <label>Total Facility Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <label>Total Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Registration_percent__c</fullName>
        <label>Total Registration %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Registrations__c</fullName>
        <label>Total Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UHC_Executive_Sponsor__c</fullName>
        <label>UHC Executive Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHC_Salesforce_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UHC Salesforce ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UHC_TIN_ID__c</fullName>
        <label>UHC TIN/ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID_Format__c</fullName>
        <label>Unique ID Format</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID_Instructions__c</fullName>
        <label>Unique ID Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID_Spouse_Dependent_Instructions__c</fullName>
        <label>Unique ID Spouse/Dependent Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weekly_Rally_Marketing_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly Rally Marketing Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wellness_Program_Name__c</fullName>
        <label>Wellness Program Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_2_Reset__c</fullName>
        <label>Year 2 Reset</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_3_Reset__c</fullName>
        <label>Year 3 Reset</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>temp_test_field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>temp test field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Hierarchy_Level__c</fullName>
        <formula>IF(ParentId==null,0,1+
IF(Parent.ParentId==null,0,1+
IF(Parent.Parent.ParentId==null,0,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Total_Covered_Lives__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Consultant</fullName>
        <active>true</active>
        <description>Consultant accounts related to Rally Opportunities and Sales Channels</description>
        <label>Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer_Support</fullName>
        <active>true</active>
        <label>Consumer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Partner</fullName>
        <active>true</active>
        <label>Distribution Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employer</fullName>
        <active>true</active>
        <description>Employer accounts related to Rally Opportunities and Members</description>
        <label>Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payer</fullName>
        <active>true</active>
        <description>Payer accounts related to Rally Opportunities and Members</description>
        <label>Payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <description>Provider accounts</description>
        <label>Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lockdown_Partner_Lookup</fullName>
        <active>true</active>
        <description>Only admins or the system can assign Partners to Accounts in the hierarchy.</description>
        <errorConditionFormula>AND(
ISCHANGED(Partner__c),
$User.ProfileId &lt;&gt; &apos;00eE0000000VOcx&apos;,
$User.ProfileId &lt;&gt; &apos;00e44000000G38Q&apos;,
$User.ProfileId &lt;&gt; &apos;00eE0000000ez8u&apos;,
$User.ProfileId &lt;&gt; &apos;00eE0000000j7b3&apos;,
$User.ProfileId &lt;&gt; &apos;00eE0000001A5IB&apos;,
$User.ProfileId &lt;&gt; &apos;00eE0000000ez8u&apos;)</errorConditionFormula>
        <errorDisplayField>Partner__c</errorDisplayField>
        <errorMessage>Only admins or the system can assign Partners to Accounts in the hierarchy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Market_Segment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Type, &apos;Consumer Support&apos;)),
ISPICKVAL(  Market_Segment__c  , &quot;Other&quot;),ISBLANK(  Other_Market_Segment__c  ))</errorConditionFormula>
        <errorDisplayField>Other_Market_Segment__c</errorDisplayField>
        <errorMessage>Other Market Segment is required when Other is picked in Market Segment drop-down.</errorMessage>
    </validationRules>
</CustomObject>